# amazon-kinesis-video-streams-webrtc-sdk-c-for-freertos

./: .gitmodules  CMakeLists.txt  README.md  build.sh
main/: AppCommon.c  AppConfig.cmake  AppMediaSrc_ESP32_FileSrc.c  AppMediaSrc_FileSrc.c  AppMetrics.c  CMakeLists.txt  cmake_config_aws.c.in  kvswebrtc_example_main.c
main/lib/libllhttp/: CMakeLists.txt
patch/amazon-kinesis-video-streams-webrtc-sdk/: 0001-Fix-compile-error-for-Ankai-platform.patch  0002-Fix-make-install-error.patch  0003-Fix-ld-error.patch  0004-Fix-utils-and-machine-static-library-install.patch  0005-Add-network-interface-for-ankai-platform.patch  0006-Add-function-of-compiling-aws-configuration.patch  0007-Enable-mbedtls-2.16.6-on-ankai-platform.patch  0008-Enable-mbedtls-logs.patch
patch/amazon-kinesis-video-streams-webrtc-sdk-c/: 0001-Enable-build-on-anyke-platform.patch  0002-Enable-china-region.patch
patch/libsrtp/: 0001-disable-the-test-apps.patch  0002-fix-the-compile-error-for-esp32.patch  0003-add-the-mbedtls-support.patch  0004-use-angle-brackets-for-consistency.patch  0005-change-the-order-of-mbedtls.patch  0006-remove-the-wordy-define.patch  0007-remove-unnecessary-parentheses.patch  0008-fix-compile-error.patch  0009-Enable-build-on-anyke-platform.patch  0009-Fix-compile-error-for-Ankai-platform.patch  0010-Fix-make-install-error.patch
patch/mbedtls/: 0001-Fix-compile-error-for-Ankai-platform.patch  0002-Fix-make-install-error.patch  0003-Fix-ld-error.patch
patch/mbedtls-2.16.6/: 0001-Enable-build-on-anyke-platform.patch  0001-Enable-mbedtls-2.16.6-on-ankai-platform.patch  0002-Enable-select-on-ankai-platform.patch
patch/mbedtls-2.28.2/: 0001-Enable-build-on-anyke-platform.patch
patch/mbedtls-3.2.1/: 0001-Enable-build-on-anyke-platform.patch  0001-Fix-compile-error-for-Ankai-platform.patch  0002-Fix-make-install-error.patch  0003-Fix-ld-error.patch  0004-Modify-net_sockets.c.patch  0005-Enable-select-on-ankai-platform.patch
patch/usrsctp/: 0001-add-lwip-support.patch  0002-disable-ipv6-and-program.patch  0003-add-mbedtls-sha1-support.patch  0004-change-the-cmakefiles-for-esp32.patch  0005-add-the-name-and-size-of-threads.patch  0006-add-pthread_exit.patch  0007-Enable-build-on-anyke-platform.patch  0007-Fix-compile-error-for-Ankai-platfor.patch  0008-Fix-make-install-error.patch  0008-fix-adaptor-lwip-IPV4-type-crash.patch  0009-Fix-ld-error.patch
patch/wslay/: 0001-patches-for-freertos.patch  0002-Enable-build-on-anyke-platform.patch  0002-Fix-compile-error-for-Ankai-platform.patch  0003-Fix-make-install-error.patch  0004-Fix-ld-error.patch
